--- a/winter shoping/winterShop.html
+++ b/winter shoping/winterShop.html
@@ -60,127 +60,167 @@
     <h5 class="text-primary">The best winter collection</h5>
     <hr><br>
     <!-- card start -->
-<div class="row d-flex justify-content-center">
-    <div class="col-md-3 mx-1 my-2">
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-3  my-2">
         <div class="card" style="width:100%;">
-            <img src="assets/images/download (2).jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Best Quality</h5>
-              <p class="card-text">Price: 2500tk</p>
-              <a href="#" class="btn btn-primary">Order now</a>
-            </div>
+          <img src="assets/images/download (2).jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
           </div>
-    </div>
-    <div class="col-md-3 mx-1 my-2">
+        </div>
+      </div>
+      <div class="col-md-3 my-2">
         <div class="card" style="width:100%;">
-            <img src="assets/images/download (3).jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Best Quality</h5>
-              <p class="card-text">Price: 2500tk</p>
-              <a href="#" class="btn btn-primary">Order now</a>
-            </div>
+          <img src="assets/images/download (3).jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
           </div>
-    </div>
-    <div class="col-md-3 mx-1 my-2">
+        </div>
+      </div>
+      <div class="col-md-3  my-2">
         <div class="card" style="width:100%;">
-            <img src="assets/images/download.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Best Quality</h5>
-              <p class="card-text">Price: 2500tk</p>
-              <a href="#" class="btn btn-primary">Order now</a>
-            </div>
+          <img src="assets/images/download.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
           </div>
-    </div>
-    <div class="col-md-3 mx-1 my-2">
+        </div>
+      </div>
+      <div class="col-md-3  my-2">
         <div class="card" style="width:100%;">
-            <img src="assets/images/images (1).jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Best Quality</h5>
-              <p class="card-text">Price: 2500tk</p>
-              <a href="#" class="btn btn-primary">Order now</a>
-            </div>
+          <img src="assets/images/images (1).jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
           </div>
-    </div>
-    <div class="col-md-3 mx-1 my-2">
+        </div>
+      </div>
+      <div class="col-md-3  my-2">
         <div class="card" style="width:100%;">
-            <img src="assets/images/images (2).jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Best Quality</h5>
-              <p class="card-text">Price: 2500tk</p>
-              <a href="#" class="btn btn-primary">Order now</a>
-            </div>
+          <img src="assets/images/images (2).jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
           </div>
-    </div>
-    <div class="col-md-3 mx-1 my-2">
+        </div>
+      </div>
+      <div class="col-md-3  my-2">
         <div class="card" style="width:100%;">
-            <img src="assets/images/images (4).jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Best Quality</h5>
-              <p class="card-text">Price: 2500tk</p>
-              <a href="#" class="btn btn-primary">Order now</a>
-            </div>
+          <img src="assets/images/images (4).jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
           </div>
-    </div>
-    <div class="col-md-3 mx-1 my-2">
+        </div>
+      </div>
+      <div class="col-md-3 my-2">
         <div class="card" style="width:100%;">
-            <img src="assets/images/images (5).jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Best Quality</h5>
-              <p class="card-text">Price: 2500tk</p>
-              <a href="#" class="btn btn-primary">Order now</a>
-            </div>
+          <img src="assets/images/images (5).jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
           </div>
-    </div>
-    <div class="col-md-3 mx-1 my-2">
+        </div>
+      </div>
+      <div class="col-md-3 my-2">
         <div class="card" style="width:100%;">
-            <img src="assets/images/images (6).jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Best Quality</h5>
-              <p class="card-text">Price: 2500tk</p>
-              <a href="#" class="btn btn-primary">Order now</a>
-            </div>
+          <img src="assets/images/images (6).jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
           </div>
-    </div>
-    <div class="col-md-3 mx-1 my-2">
+        </div>
+      </div>
+      <div class="col-md-3  my-2">
         <div class="card" style="width:100%;">
-            <img src="assets/images/images (8).jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Best Quality</h5>
-              <p class="card-text">Price: 2500tk</p>
-              <a href="#" class="btn btn-primary">Order now</a>
-            </div>
+          <img src="assets/images/images (1).jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
           </div>
-    </div>
-    <div class="col-md-3 mx-1 my-2">
+        </div>
+      </div>
+      <div class="col-md-3 my-2">
         <div class="card" style="width:100%;">
-            <img src="assets/images/images (6).jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Best Quality</h5>
-              <p class="card-text">Price: 2500tk</p>
-              <a href="#" class="btn btn-primary">Order now</a>
-            </div>
+          <img src="assets/images/download (3).jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
           </div>
-    </div>
-    <div class="col-md-3 mx-1 my-2">
+        </div>
+      </div>
+      <div class="col-md-3 my-2">
         <div class="card" style="width:100%;">
-            <img src="assets/images/images (9).jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Best Quality</h5>
-              <p class="card-text">Price: 2500tk</p>
-              <a href="#" class="btn btn-primary">Order now</a>
-            </div>
+          <img src="assets/images/images (8).jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
           </div>
-    </div>
-    <div class="col-md-3 mx-1 my-2">
+        </div>
+      </div>
+      <div class="col-md-3 my-2">
         <div class="card" style="width:100%;">
-            <img src="assets/images/images.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Best Quality</h5>
-              <p class="card-text">Price: 2500tk</p>
-              <a href="#" class="btn btn-primary">Order now</a>
-            </div>
+          <img src="assets/images/images (6).jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
           </div>
-    </div>
+        </div>
+      </div>
+      <div class="col-md-3 my-2">
+        <div class="card" style="width:100%;">
+          <img src="assets/images/images (9).jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 my-2">
+        <div class="card" style="width:100%;">
+          <img src="assets/images/images (5).jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 my-2">
+        <div class="card" style="width:100%;">
+          <img src="assets/images/images.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 my-2">
+        <div class="card" style="width:100%;">
+          <img src="assets/images/images (9).jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Best Quality</h5>
+            <p class="card-text">Price: 2500tk</p>
+            <a href="#" class="btn btn-primary">Order now</a>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- card end -->
 </div>
