--- a/winter shoping/winterShop.html
+++ b/winter shoping/winterShop.html
@@ -25,6 +25,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">New Collection</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Quick Buy</a>
+              </li>
             </ul>
           </div>
           <form class="d-flex">
